--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,8 +7,20 @@
       {% endif %}
     </head>
     <body>
-        <div>TradeTracker <a href="/index">Home</a></div>
+        <div>TradeTracker
+            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('login') }}">Sign In</a>
+        </div>
         <hr>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 </html>
