Chapter 5, user login and registration

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <h1>Hi, {{ current_user.username }}!</h1>
     <h2>List of people:</h2>
     {% for person in people %}
         {{ person.name }} works in {{ person.field }}<br>
