--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,11 @@
     <body>
         <div>TradeTracker
             <a href="{{ url_for('index') }}">Home</a>
+            {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Sign In</a>
+            {% else %}
+            <a href="{{ url_for('logout') }}">Log Out</a>
+            {% endif %}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
