--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,5 +21,5 @@
         <p>{{ form.rememberMe() }} {{ form.rememberMe.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
-    
+    <p>New user: <a href="{{ url_for('register') }}">Click to register</a></p>
 {% endblock content %}
