--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block app_content %}
     <h1>Register</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
@@ -34,4 +34,4 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
-{% endblock content %}
+{% endblock app_content %}
