--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block app_content %}
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
@@ -22,4 +22,4 @@
         <p>{{ form.submit() }}</p>
     </form>
     <p>New user: <a href="{{ url_for('register') }}">Click to register</a></p>
-{% endblock content %}
+{% endblock app_content %}
