Added buttons to individual trades

--- a/app/templates/addTrade.html
+++ b/app/templates/addTrade.html
@@ -6,7 +6,12 @@
 {% endblock title %}
 
 {% block jumbotron_content %}
-    <h2>We'll be adding new trades here</h2>
+    <h3>We'll be adding new trades here</h3>
+    <p>Don't forget to:</p>
+    <ul>
+        <li>add the underlying price</li>
+        <li>add a meaningful comment</li>
+    </ul>
 {% endblock jumbotron_content %}
 
 {% block app_content %}
