Implemented functionality to edit and delete individual trades

--- a/app/templates/editTrade.html
+++ b/app/templates/editTrade.html
@@ -6,12 +6,7 @@
 {% endblock title %}
 
 {% block jumbotron_content %}
-    <h3>We'll be adding new trades here</h3>
-    <p>Don't forget to:</p>
-    <ul>
-        <li>add the underlying price</li>
-        <li>add a meaningful comment</li>
-    </ul>
+    <h3>We'll be editing an existing trade here {{ playid }}</h3>
 {% endblock jumbotron_content %}
 
 {% block app_content %}
