--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,11 +25,20 @@
                     <table style="table-layout: fixed; width: 100%;">
                         <tr>
                             <td style="text-align: left;">{{ trade.ticker }} ({{ trade.playid }})</td>
+                            {% if trade.no_contracts == 1 %}
+                                <td style="text-align: right;">{{ trade.no_contracts }} contract</td>
+                            {% else %}
+                                <td style="text-align: right;">{{ trade.no_contracts }} contracts</td>
+                            {% endif %}
                             <td style="text-align: right">{{ trade.strategy }}</td>
                             <td style="text-align: right">
-                                <button type="button" class="btn btn-primary">Edit</button>
-                                <button type="button" class="btn btn-warning">Roll</button>
-                                <button type="button" class="btn btn-danger">Delete</button>
+                                <a href="{{ url_for('edit', id=trade.playid) }}"><button type="button" class="btn btn-primary">Edit</button></a>
+                                {% if trade.status == "Closed" %}
+                                    <button type="button" class="btn btn-warning" disabled>Roll</button>
+                                {% else %}
+                                    <button type="button" class="btn btn-warning">Roll</button>
+                                {% endif %}
+                                <a href="{{ url_for('delete', id=trade.playid) }}"><button type="button" class="btn btn-danger">Delete</button></a>
                             </td>
                         </tr>
                     </table>
