--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
                                 {% if trade.status == "Closed" %}
                                     <button type="button" class="btn btn-warning" disabled>Roll</button>
                                 {% else %}
-                                    <button type="button" class="btn btn-warning">Roll</button>
+                                    <a href="{{ url_for('roll', id=trade.playid) }}"><button type="button" class="btn btn-warning">Roll</button></a>
                                 {% endif %}
                                 <a href="{{ url_for('delete', id=trade.playid) }}"><button type="button" class="btn btn-danger">Delete</button></a>
                             </td>
