--- a/app/templates/rollTrade.html
+++ b/app/templates/rollTrade.html
@@ -6,18 +6,13 @@
 {% endblock title %}
 
 {% block jumbotron_content %}
-    <h3>We'll be adding new trades here</h3>
-    <p>Don't forget to:</p>
-    <ul>
-        <li>add the underlying price</li>
-        <li>add a meaningful comment, including breakeven price, expected condition to close, etc.</li>
-    </ul>
+    <h3>We're rollin'</h3>
 {% endblock jumbotron_content %}
 
 {% block app_content %}
     <script src="{{url_for('static', filename='addTrade.js')}}"></script>
 
-    {% include 'subTradeForm.html' %}
+    {% include 'subRollForm.html' %}
 
     {% if form.errors %}
         {{ form.errors }}
