--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,8 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-left">
-                    <li class="active"><a href="{{ url_for('addTrade') }}">Add new trade</a></li>
+                    <li><a href="{{ url_for('addTrade') }}">Add new trade</a></li>
+                    <li><a href="{{ url_for('statistics') }}">Statistics</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
